# visionvbased-desktop-automation

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  main.py  pyproject.toml  pyroject.toml  smoke_test.py
src/api/: __init__.py  jsonplaceholder.py
src/automation/: __init__.py  desktop.py  notepad.py
src/grounding/: __init__.py  base.py  dino_grounder.py  hybrid_grounder.py  ocr_grounder.py  template_grounder.py  vlm_grounder.py
src/utils/: __init__.py  file_manager.py  logger.py
